--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Gromov Bible</title>
     <style>
         #button {
+        position: fixed;
         margin: 11px 10px;
         padding: 10px;
         background-color:white;
