--- a/index.html
+++ b/index.html
@@ -70,16 +70,24 @@
             padding: 2px;
             font-family: sans-serif;
         }
-        #onePhoto {
+        #firstPhoto {
             width: 282px;
             background: whitesmoke;
             border: 2px solid lightgray
         }
-        #twoPhoto {
+        #secondPhoto {
+            margin: 10px;
             position: absolute;
             width: 338px;
             background: lime;
             border: 2px solid limegreen;
+        }
+        #thirdPhoto {
+            margin-left: 360px;
+            position: absolute;
+            width: 330px;
+            background: gray;
+            border: 2px solid black;
         }
         button {
             padding: 5px;
@@ -96,8 +104,9 @@
     <div id = "heading"><a href = "about.gromov.ru" id="about"><div id = "button">Обо мне</div></a>
       </div>
       <h1 id ="headingtxt">Bible Photos</h1>
-      <div id = "mainzone"><h1>Описание</h1><p>На этой странице я размещаю фотографии со стихами из Библии.</p><div id = "onePhoto">
-    <h2>1. Иоанна 3:16 <a href = "Иоанна 3 16.jpg" download><button>Скачать</button></a></h2><br><img width = "270" height = "350" src = "Иоанна 3 16.jpg"></div><div id = "twoPhoto">
-            <h2>2. 2Пар 16:9 <a href = "2Пар 16 9.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "2Пар 16 9.jpg"></div></div>
+      <div id = "mainzone"><h1>Описание</h1><p>На этой странице я размещаю фотографии со стихами из Библии.</p><div id = "firstPhoto">
+    <h2>1. Иоанна 3:16 <a href = "Иоанна 3 16.jpg" download><button>Скачать</button></a></h2><br><img width = "270" height = "350" src = "Иоанна 3 16.jpg"></div><div id = "secondPhoto">
+            <h2>2. 2Пар 16:9 <a href = "2Пар 16 9.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "2Пар 16 9.jpg"></div><div id = "thirdPhoto">
+                    <h2>3. Молитва <a href = "Отче наш!.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "500" src = "Отче наш!.jpg"></div></div>
 </body>
 </html>
