--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             height: 20px;
             border-radius: 20px;
             text-align: center;
-            color: rgb(11, 185, 11);
+            color: #0bb90b;
             font-family: sans-serif;
             padding: 10px 10px;
             font-weight:bold;
@@ -62,32 +62,38 @@
         #headingtxt {
             text-align: center;
             font-family: sans-serif;
-            color: white;
+            color: #ffffff;
         }
         #mainzone {
-            background-color: white;
+            background-color: #ffffff;
             width: 1350px;
             padding: 2px;
             font-family: sans-serif;
         }
         #firstPhoto {
             width: 282px;
-            background: whitesmoke;
-            border: 2px solid lightgray
+            background: #f5f5f5;
+            border: 2px solid #d3d3d3
         }
         #secondPhoto {
             margin: 10px;
             position: absolute;
             width: 338px;
-            background: lime;
-            border: 2px solid limegreen;
+            background: #ffc0cb;
+            border: 2px solid #ff0000;
         }
         #thirdPhoto {
             margin-left: 360px;
             position: absolute;
             width: 330px;
-            background: gray;
-            border: 2px solid black;
+            background: #808080;
+            border: 2px solid #000000;
+        }
+        #fourthPhoto {
+            position: absolute;
+            width: 330px;
+            background: #00ff00;
+            border: 2px solid #32cd32;
         }
         button {
             padding: 5px;
@@ -108,5 +114,7 @@
     <h2>1. Иоанна 3:16 <a href = "Иоанна 3 16.jpg" download><button>Скачать</button></a></h2><br><img width = "270" height = "350" src = "Иоанна 3 16.jpg"></div><div id = "secondPhoto">
             <h2>2. 2Пар 16:9 <a href = "2Пар 16 9.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "2Пар 16 9.jpg"></div><div id = "thirdPhoto">
                     <h2>3. Молитва <a href = "Отче наш!.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "500" src = "Отче наш!.jpg"></div></div>
+            <div id = "fourthPhoto">
+                    <h2>4. Галатам 5:22 <a href = "Галатам 5 22.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "Галатам 5 22.jpg"></div>
 </body>
 </html>
