--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         }
         #mainzone {
             background-color: #ffffff;
-            width: 1350px;
+            width: 1320px;
             padding: 2px;
             font-family: sans-serif;
         }
@@ -90,6 +90,7 @@
             border: 2px solid #000000;
         }
         #fourthPhoto {
+            margin-left: 700px;
             position: absolute;
             width: 330px;
             background: #00ff00;
@@ -113,7 +114,7 @@
       <div id = "mainzone"><h1>Описание</h1><p>На этой странице я размещаю фотографии со стихами из Библии.</p><div id = "firstPhoto">
     <h2>1. Иоанна 3:16 <a href = "Иоанна 3 16.jpg" download><button>Скачать</button></a></h2><br><img width = "270" height = "350" src = "Иоанна 3 16.jpg"></div><div id = "secondPhoto">
             <h2>2. 2Пар 16:9 <a href = "2Пар 16 9.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "2Пар 16 9.jpg"></div><div id = "thirdPhoto">
-                    <h2>3. Молитва <a href = "Отче наш!.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "500" src = "Отче наш!.jpg"></div></div>
+                    <h2>3. Молитва <a href = "Отче наш!.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "500" src = "Отче наш!.jpg"></div>
             <div id = "fourthPhoto">
                     <h2>4. Галатам 5:22 <a href = "Галатам 5 22.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "Галатам 5 22.jpg"></div>
 </body>
