--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         img {
             padding: 5px
         }
-        #mainzone > div {
+        .photo > div {
            display: inline-block;
         }
     </style>
@@ -106,11 +106,11 @@
     <div id = "heading"><a href = "about.gromov.ru" id="about"><div id = "button">Обо мне</div></a>
       <h1 id ="headingtxt">Bible Photos</h1>
       </div>
-      <div id = "mainzone"><h1>Описание</h1><p>На этой странице я размещаю фотографии со стихами из Библии.</p><div id = "firstPhoto">
-    <h2>1. Иоанна 3:16 <a href = "Иоанна 3 16.jpg" download><button>Скачать</button></a></h2><br><img width = "270" height = "350" src = "Иоанна 3 16.jpg"></div><div id = "secondPhoto">
-            <h2>2. 2Пар 16:9 <a href = "2Пар 16 9.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "2Пар 16 9.jpg"></div><div id = "thirdPhoto">
+      <div id = "mainzone"><h1>Описание</h1><p>На этой странице я размещаю фотографии со стихами из Библии.</p><div class = "photo" id = "firstPhoto">
+    <h2>1. Иоанна 3:16 <a href = "Иоанна 3 16.jpg" download><button>Скачать</button></a></h2><br><img width = "270" height = "350" src = "Иоанна 3 16.jpg"></div><div class = "photo" id = "secondPhoto">
+            <h2>2. 2Пар 16:9 <a href = "2Пар 16 9.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "2Пар 16 9.jpg"></div><div class = "photo" id = "thirdPhoto">
                     <h2>3. Молитва <a href = "Отче наш!.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "500" src = "Отче наш!.jpg"></div>
-            <div id = "fourthPhoto">
+            <div class = "photo" id = "fourthPhoto">
                     <h2>4. Галатам 5:22 <a href = "Галатам 5 22.jpg" download><button>Скачать</button></a></h2><br><img width = "320" height = "350" src = "Галатам 5 22.jpg"></div>
 </body>
 </html>
