--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         padding: 10px 10px;
         }
         #heading {
-        position:fixed;
         height: 70px;
         background-color:rgb(11, 185, 11);
         }
@@ -96,6 +95,9 @@
         }
         img {
             padding: 5px
+        }
+        .photo {
+            margin-left: 20px;
         }
         .photo > div {
            display: inline-block;
