--- a/index.html
+++ b/index.html
@@ -73,19 +73,16 @@
             border: 2px solid #d3d3d3
         }
         #secondPhoto {
-            margin: 10px;
             width: 338px;
             background: #ffc0cb;
             border: 2px solid #ff0000;
         }
         #thirdPhoto {
-            margin-left: 360px;
             width: 330px;
             background: #808080;
             border: 2px solid #000000;
         }
         #fourthPhoto {
-            margin-left: 700px;
             width: 330px;
             background: #00ff00;
             border: 2px solid #32cd32;
@@ -98,6 +95,7 @@
         }
         .photo {
             margin-left: 20px;
+            display: inline-block;
         }
         .photo > div {
            display: inline-block;
